unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/CMPL123QMS__Change_Control__c.object-meta.xml
<CustomObject>
    <label>Change Control</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Change Control Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Control</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>