unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Affected_Areas__c.field-meta.xml
<CustomField>
        <fullName>Affected_Areas__c</fullName>
        <label>Affected Areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Area 1</fullName>
                </value>
                <value>
                    <fullName>Area 2</fullName>
                </value>
                <value>
                    <fullName>Area 3</fullName>
                </value>
                <value>
                    <fullName>Area 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>