unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Control</relationshipName>
        <type>Lookup</type>
    </CustomField>