unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Change_Control_Review_Completed__c.field-meta.xml
<CustomField>
        <fullName>Change_Control_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Control Review Completed?</label>
        <type>Checkbox</type>
    </CustomField>