unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/CMPL123QMS__Change_Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Change_Description__c</fullName>
        <label>Change Description</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>