unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/CMPL123QMS__Date_Due__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Date_Due__c</fullName>
        <label>Date Due</label>
        <type>DateTime</type>
    </CustomField>