unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/CMPL123QMS__Department__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Department__c</fullName>
        <label>Dept</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>