unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/CMPL123QMS__Functional_Area__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Functional_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Functional Area</label>
        <referenceTo>CMPL123QMS__Functional_Area__c</referenceTo>
        <relationshipLabel>Change Controls</relationshipLabel>
        <relationshipName>Change_Control</relationshipName>
        <type>Lookup</type>
    </CustomField>