unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/CMPL123QMS__Justification__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Justification__c</fullName>
        <label>Justification</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>