unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/CMPL123QMS__Main_Contact__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Main_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Control</relationshipName>
        <type>Lookup</type>
    </CustomField>