unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/CMPL123QMS__Management_Approved_By__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Management_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Management Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Control4</relationshipName>
        <type>Lookup</type>
    </CustomField>