unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/CMPL123QMS__Management_Approved_On__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Management_Approved_On__c</fullName>
        <label>Management Approved On</label>
        <type>DateTime</type>
    </CustomField>