unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/CMPL123QMS__Manager__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Control1</relationshipName>
        <type>Lookup</type>
    </CustomField>