unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/CMPL123QMS__Original_Due_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Original_Due_Date__c</fullName>
        <label>Original Due Date</label>
        <type>DateTime</type>
    </CustomField>