unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/CMPL123QMS__Process__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Process__c</fullName>
        <label>Process</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Incoming Inspection</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>