unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/CMPL123QMS__Reason_for_Timeline__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Reason_for_Timeline__c</fullName>
        <label>Reason for Timeliness</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>