unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/CMPL123QMS__Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type 1</fullName>
                </value>
                <value>
                    <fullName>Type 2</fullName>
                </value>
                <value>
                    <fullName>Type 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>