unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Comment_Document__c.field-meta.xml
<CustomField>
        <fullName>Comment_Document__c</fullName>
        <label>Document Comment</label>
        <type>TextArea</type>
    </CustomField>