unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Comment_Material__c.field-meta.xml
<CustomField>
        <fullName>Comment_Material__c</fullName>
        <label>Material/Equipment Comment</label>
        <type>TextArea</type>
    </CustomField>