unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Comment_Product__c.field-meta.xml
<CustomField>
        <fullName>Comment_Product__c</fullName>
        <label>Product Comment</label>
        <type>TextArea</type>
    </CustomField>