unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Date_Opened__c.field-meta.xml
<CustomField>
        <fullName>Date_Opened__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Opened</label>
        <type>Date</type>
    </CustomField>