unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Document_Name__c.field-meta.xml
<CustomField>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <type>TextArea</type>
    </CustomField>