unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Document_Reference__c.field-meta.xml
<CustomField>
        <fullName>Document_Reference__c</fullName>
        <label>Document Reference?</label>
        <type>TextArea</type>
    </CustomField>