unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Document_Type__c.field-meta.xml
<CustomField>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>TextArea</type>
    </CustomField>