unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Dosage__c.field-meta.xml
<CustomField>
        <fullName>Dosage__c</fullName>
        <label>Dosage</label>
        <type>TextArea</type>
    </CustomField>