unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Emergency_Change__c.field-meta.xml
<CustomField>
        <fullName>Emergency_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency Change?</label>
        <type>Checkbox</type>
    </CustomField>