unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Equipment_Affected__c.field-meta.xml
<CustomField>
        <fullName>Equipment_Affected__c</fullName>
        <label>Equipment Affected?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>