unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Equipment_Description__c.field-meta.xml
<CustomField>
        <fullName>Equipment_Description__c</fullName>
        <label>Equipment Description</label>
        <type>TextArea</type>
    </CustomField>