unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Equipment_ID__c.field-meta.xml
<CustomField>
        <fullName>Equipment_ID__c</fullName>
        <label>Equipment ID</label>
        <type>TextArea</type>
    </CustomField>