unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Form__c.field-meta.xml
<CustomField>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <type>TextArea</type>
    </CustomField>