unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/GxP_Change__c.field-meta.xml
<CustomField>
        <fullName>GxP_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GxP Change?</label>
        <type>Checkbox</type>
    </CustomField>