unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Impacted_Site_s__c.field-meta.xml
<CustomField>
        <fullName>Impacted_Site_s__c</fullName>
        <label>Impacted Site(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Site 1</fullName>
                </value>
                <value>
                    <fullName>Site 2</fullName>
                </value>
                <value>
                    <fullName>Site 3</fullName>
                </value>
                <value>
                    <fullName>Site 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>