unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Material_Lot_Number_s__c.field-meta.xml
<CustomField>
        <fullName>Material_Lot_Number_s__c</fullName>
        <label>Material Lot Number(s)</label>
        <type>TextArea</type>
    </CustomField>