unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Material_Name__c.field-meta.xml
<CustomField>
        <fullName>Material_Name__c</fullName>
        <label>Material Name</label>
        <type>TextArea</type>
    </CustomField>