unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Material_Number__c.field-meta.xml
<CustomField>
        <fullName>Material_Number__c</fullName>
        <label>Material Number</label>
        <type>TextArea</type>
    </CustomField>