unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Material_s_Affected__c.field-meta.xml
<CustomField>
        <fullName>Material_s_Affected__c</fullName>
        <label>Material(s) Affected?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Material 1</fullName>
                </value>
                <value>
                    <fullName>Material 2</fullName>
                </value>
                <value>
                    <fullName>Material 3</fullName>
                </value>
                <value>
                    <fullName>Material 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>