unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Product__c.field-meta.xml
<CustomField>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipLabel>Change Control</relationshipLabel>
        <relationshipName>Change_Control</relationshipName>
        <type>Lookup</type>
    </CustomField>