unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Product_Name__c.field-meta.xml
<CustomField>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <type>TextArea</type>
    </CustomField>