unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Product_Number__c.field-meta.xml
<CustomField>
        <fullName>Product_Number__c</fullName>
        <label>Product Number</label>
        <type>TextArea</type>
    </CustomField>