unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Product_s_Affected__c.field-meta.xml
<CustomField>
        <fullName>Product_s_Affected__c</fullName>
        <label>Product(s) Affected?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product 1</fullName>
                </value>
                <value>
                    <fullName>Product 2</fullName>
                </value>
                <value>
                    <fullName>Product 3</fullName>
                </value>
                <value>
                    <fullName>Product 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>