unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/fields/Quality_Contact__c.field-meta.xml
<CustomField>
        <fullName>Quality_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Control2</relationshipName>
        <type>Lookup</type>
    </CustomField>