unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/validationRules/Prevent_Edit_Change_control_on_closed_QE.validationRule-meta.xml
<ValidationRule>
        <fullName>Prevent_Edit_Change_control_on_closed_QE</fullName>
        <active>false</active>
        <errorConditionFormula>Quality_Event__r.CMPL123_WF_Status__c  =="Closed - Quality Event"</errorConditionFormula>
        <errorMessage>Record Locked</errorMessage>
    </ValidationRule>