unpackaged/main/default/objects/CMPL123QMS__Change_Control__c/listViews/CMPL123QMS__All.listView-meta.xml
<ListView>
        <fullName>CMPL123QMS__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123QMS__Change_Description__c</columns>
        <columns>CMPL123QMS__Date_Due__c</columns>
        <columns>CMPL123QMS__Department__c</columns>
        <columns>CMPL123QMS__Process__c</columns>
        <columns>CMPL123QMS__Main_Contact__c</columns>
        <columns>CMPL123QMS__QA_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>